// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runtime getEidsByNetworkName should throw if there are more networks defined with the same eid 1`] = `
"Found multiple networks configured with the same 'eid':

- one, two, three have eid set to APTOS_MAINNET
- four, five have eid set to BASE_TESTNET

Please fix this in your hardhat config."
`;

exports[`runtime getNetworkNameForEid should throw if there are more networks defined with the same eid 1`] = `
"Found multiple networks configured with the same 'eid':

- one, two, three have eid set to APTOS_MAINNET

Please fix this in your hardhat config."
`;
